--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@chakra-ui/react": "^3.19.1",
     "@emotion/react": "^11.14.0",
+    "local-storage": "^2.0.0",
     "motion": "^12.16.0",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
