--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "@emotion/react": "^11.14.0",
     "axios": "^1.9.0",
     "local-storage": "^2.0.0",
-    "motion": "^12.16.0",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.57.0",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
