--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ace-builds": "^1.42.0",
     "axios": "^1.10.0",
     "next": "15.3.3",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-ace": "^14.0.1",
