--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "frontend",
-  "version": "0.2.1",
+  "name": "auto-boc",
+  "version": "0.3.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
