--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "@emotion/react": "^11.14.0",
     "ace-builds": "^1.42.0",
     "axios": "^1.10.0",
-    "next": "15.3.3",
+    "next": "15.3.4",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0",
+    "react": "19.1.0",
     "react-ace": "^14.0.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "19.1.0",
     "react-hook-form": "^7.57.0",
     "react-icons": "^5.5.0"
   },
@@ -26,10 +26,14 @@
     "@chakra-ui/cli": "^3.19.1",
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "19.1.8",
+    "@types/react-dom": "19.1.6",
     "eslint": "^9",
-    "eslint-config-next": "15.3.3",
+    "eslint-config-next": "15.3.4",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.1.8",
+    "@types/react-dom": "19.1.6"
   }
 }
