--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@chakra-ui/react": "^3.19.1",
     "@emotion/react": "^11.14.0",
+    "@tanstack/react-query": "^5.81.2",
     "ace-builds": "^1.42.0",
     "axios": "^1.10.0",
     "next": "15.3.4",
