--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "auto-boc",
-  "version": "0.3.0",
+  "name": "boc-v1",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
