Feat: Add alert link field to createAlert interface and update alert creation logic; refactor components for improved form handling and error management

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -20,7 +20,7 @@
     "react": "19.1.0",
     "react-ace": "^14.0.1",
     "react-dom": "19.1.0",
-    "react-hook-form": "^7.57.0",
+    "react-hook-form": "^7.59.0",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
