--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -12,13 +12,11 @@
     "@chakra-ui/react": "^3.19.1",
     "@emotion/react": "^11.14.0",
     "@tanstack/react-query": "^5.81.2",
-    "ace-builds": "^1.42.0",
     "axios": "^1.10.0",
     "next": "15.3.4",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
-    "react-ace": "^14.0.1",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.59.0",
     "react-icons": "^5.5.0"
